# Robot

./: .gitignore
robot_teacher_ws/: robot_ui_server.py
robot_teacher_ws/src/robot_teacher/: CMakeLists.txt  README.md  TROUBLESHOOTING.md  package.xml
robot_teacher_ws/src/robot_teacher/include/robot_teacher/: common.hpp
robot_teacher_ws/src/robot_teacher/launch/: robot_teacher_launch.py
robot_teacher_ws/src/robot_teacher/src/: dialog_node.cpp  hearing_node.cpp  perception_node.cpp
